An initial working version of DataMagiX
This is a simple proof of concept of adding functionality to DBeaver.

(After selecting the "Test Hello" menu item from the DataMagiX menu,
	a simple java module is written to C:\DmxDBeaverTest folder.)

Author:    Robert Spann <spann@panopli.net>

 On branch DataMagiX240820
 Changes to be committed:
	modified:   build.cmd
	modified:   features/org.jkiss.dbeaver.standalone.feature/pom.xml
	modified:   features/pom.xml
	modified:   plugins-dev/org.jkiss.dbeaver.ext.test/plugin.xml
	modified:   plugins/pom.xml

--- a/plugins-dev/org.jkiss.dbeaver.ext.test/plugin.xml
+++ b/plugins-dev/org.jkiss.dbeaver.ext.test/plugin.xml
@@ -67,7 +67,7 @@
                 <command commandId="org.jkiss.dbeaver.test.showNotification"/>
                 <command commandId="org.jkiss.dbeaver.test.showIcons"/>
 
-                <separator visible="true"/>
+                <separator visible="true" name="test"/>
                 <command commandId="org.eclipse.ui.views.showView">
                     <parameter name="org.eclipse.ui.views.showView.viewId" value="org.eclipse.swt.tools.views.SpyView"/>
                 </command>
