--- a/features/pom.xml
+++ b/features/pom.xml
@@ -39,6 +39,7 @@
                 <module>org.jkiss.dbeaver.standalone.feature</module>
                 <module>org.jkiss.dbeaver.appstore.feature</module>
                 <module>org.jkiss.dbeaver.ce.feature</module>
+                <module>net.panopli.datamagix.core.feature</module>
             </modules>
         </profile>
     </profiles>
