--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -28,6 +28,7 @@
         <module>org.jkiss.dbeaver.dpi.app</module>
         <module>org.jkiss.dbeaver.dpi.model</module>
 
+		<module>net.panopli.datamagix.core</module>
         <module>org.jkiss.dbeaver.cmp.simple</module>
         <module>org.jkiss.dbeaver.erd.model</module>
 
